db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-app
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        volumeMounts:
        - name: db-store
          mountPath: "/var/lib/mysql"
      volumes:
      - name: db-store
        persistentVolumeClaim:
          claimName: pvc001
