nginx-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-1-svc
  name: nginx-1-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-1
  type: NodePort
