nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: nginx
