ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-2
spec:
  rules:
  - host: my-app.com
    http:
      paths:
      - backend:
          service:
            name: my-svc
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer: {}
