ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ingress
spec:
  rules:
  - host: cloudtech.com
    http:
      paths:
      - backend:
          service:
            name: my-app-svc 
            port:
              number: 8080
        path: /
        pathType: Exact
